force-app/main/default/objects/Pricing_Data__c/Pricing_Data__c.object-meta.xml
<CustomObject>
    <description>Custom object to store the pricing data sheet attributes</description>
    <label>Pricing Data</label>
    <nameField>
        <displayFormat>PD-{000}</displayFormat>
        <label>Pricing Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pricing Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>