force-app/main/default/objects/Pricing_Data__c/fields/Color_1__c.field-meta.xml
<CustomField>
    <fullName>Color_1__c</fullName>
    <label>Color# 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>