force-app/main/default/objects/Pricing_Data__c/fields/Color_2__c.field-meta.xml
<CustomField>
    <fullName>Color_2__c</fullName>
    <formula>IF( 
				Max_Pieces__c &lt;= $Setup.OpptyProds__c.Price_Change_Quantity__c , 
				Color_1__c + $Setup.OpptyProds__c.PricingData1__c, 
				Color_1__c + $Setup.OpptyProds__c.PricingData2__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Color# 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>