force-app/main/default/objects/Pricing_Data__c/fields/Contract_Pricing_Merch__c.field-meta.xml
<CustomField>
    <fullName>Contract_Pricing_Merch__c</fullName>
    <label>Contract Pricing Merch</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>