force-app/main/default/objects/Pricing_Data__c/fields/GP_Church__c.field-meta.xml
<CustomField>
    <fullName>GP_Church__c</fullName>
    <label>G.P. Church</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>