force-app/main/default/objects/Pricing_Data__c/fields/Max_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Max_Pieces__c</fullName>
    <label>Max Pieces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>