force-app/main/default/objects/Pricing_Data__c/fields/Min_Pieces__c.field-meta.xml
<CustomField>
    <fullName>Min_Pieces__c</fullName>
    <label>Min Pieces</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>