force-app/main/default/objects/Pricing_Data__c/fields/No_of_Pieces__c.field-meta.xml
<CustomField>
    <fullName>No_of_Pieces__c</fullName>
    <formula>TEXT(Min_Pieces__c) &amp; &quot; to &quot; &amp; TEXT(Max_Pieces__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Pieces</label>
    <type>Text</type>
</CustomField>