force-app/main/default/objects/Pricing_Data__c/listViews/Edit_Pricing_Data.listView-meta.xml
<ListView>
    <fullName>Edit_Pricing_Data</fullName>
    <columns>NAME</columns>
    <columns>No_of_Pieces__c</columns>
    <columns>Color_1__c</columns>
    <columns>GP_Church__c</columns>
    <columns>Contract_Pricing_Merch__c</columns>
    <filterScope>Everything</filterScope>
    <label>Edit Pricing Data</label>
</ListView>